--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+.gnuma-view {
+    background-color: #f0f2f5;
+    padding: 25px;
+    margin: 0;
+    position: relative;
+
+    height: calc(100vh - 64px);
+    overflow-y: scroll;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fade-enter {
+    opacity: 0;
+    transform: scale(1.05);
+
+    position: absolute;
+    left: 25px;
+    right: 25px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fade-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: all 300ms;
+    transition-delay: 150ms;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.fade-exit {
+    opacity: 1;
+    transform: scale(1);
+
+    position: absolute;
+    left: 25px;
+    right: 25px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fade-exit-active {
+    opacity: 0.01;
+    transform: scale(.95);
+    transition: all 300ms;
 }
